--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <a href="https://oracle.com" target="_blank" id="link-id" title="oracle-title">oracle</a>
   <p id="DOM-text-id" title="DOM-Text-title">This is some text inside main DOM.</p>
 
-  <!-- Main HTML Elements -->
   <h2>Checkboxes</h2>
   <label title="Dev-checkbox-title">
     <input type="checkbox" id="Dev-id" title="Dev-title"> Dev
@@ -38,62 +37,54 @@
   </select>
 
   <script>
-    const customButton = document.createElement("custom-sdom");
-    const shadowRoot = customButton.attachShadow({ mode: "open" });
-    shadowRoot.innerHTML = `
-      <h1 id="shadow-header-id" title="SDOM-header-title"> Below Elements inside ShadowDOM H1-Text
-        <button id="SDOM-button-ID" title="SDOM-button-Title"> SDOMButtonText </button>
-      </h1>
-      <a href="https://oracle.com" target="_blank" id="example-link" title="oracle-title">oracle</a>
-      <p id="shadow-text-id" title="shadow-text-title">This is some text inside the shadow DOM.</p>
-      
-      <style>
-        h1 { color: black; }
-        button { color: darkgrey ; }
-        a { color: blue; text-decoration: underline; }
-        h2 { color: darkgrey; margin-top: 20px; }
-      </style>
+    class CustomSdom extends HTMLElement {
+      constructor() {
+        super();
+        const shadowRoot = this.attachShadow({ mode: "open" });
+        shadowRoot.innerHTML = `
+          <h1 id="shadow-header-id" title="SDOM-header-title"> Below Elements inside ShadowDOM H1-Text
+            <button id="SDOM-button-ID" title="SDOM-button-Title"> SDOMButtonText </button>
+          </h1>
+          <a href="https://oracle.com" target="_blank" id="example-link" title="oracle-title">oracle</a>
+          <p id="shadow-text-id" title="shadow-text-title">This is some text inside the shadow DOM.</p>
+          
+          <style>
+            h1 { color: black; }
+            button { color: darkgrey ; }
+            a { color: blue; text-decoration: underline; }
+            h2 { color: darkgrey; margin-top: 20px; }
+          </style>
 
-      <h2 id="checkbox-header" title="Choose your role">Choose your role:</h2>
-      <label title="Dev-checkbox-title">
-        <input type="checkbox" id="Dev-id-sdom" title="Dev-title"> Dev
-      </label>
-      <label title="QA-checkbox-title">
-        <input type="checkbox" id="QA-id-sdom" title="QA-title"> QA
-      </label>
-      <label title="DevOps-checkbox-title">
-        <input type="checkbox" id="DevOps-id-sdom" title="DevOps-title"> DevOps
-      </label>
+          <h2 id="checkbox-header" title="Choose your role">Choose your role:</h2>
+          <label title="Dev-checkbox-title">
+            <input type="checkbox" id="Dev-id-sdom" title="Dev-title"> Dev
+          </label>
+          <label title="QA-checkbox-title">
+            <input type="checkbox" id="QA-id-sdom" title="QA-title"> QA
+          </label>
+          <label title="DevOps-checkbox-title">
+            <input type="checkbox" id="DevOps-id-sdom" title="DevOps-title"> DevOps
+          </label>
 
-      <h2 id="radio-header" title="Select Radio options">Select one option:</h2>
-      <label title="Yes-radio-title">
-        <input type="radio" name="radioGroup-sdom" value="Yes-value" id="Yes-id-sdom" title="Yes-title"> Yes
-      </label>
-      <label title="No-radio-title">
-        <input type="radio" name="radioGroup-sdom" value="No-value" id="No-id-sdom" title="No-title"> No
-      </label>
+          <h2 id="radio-header" title="Select Radio options">Select one option:</h2>
+          <label title="Yes-radio-title">
+            <input type="radio" name="radioGroup-sdom" value="Yes-value" id="Yes-id-sdom" title="Yes-title"> Yes
+          </label>
+          <label title="No-radio-title">
+            <input type="radio" name="radioGroup-sdom" value="No-value" id="No-id-sdom" title="No-title"> No
+          </label>
 
-      <h2 id="dropdown-header" title="Select dropdown option">Select an option:</h2>
-      <select id="Languages-sdom" title="Language-Dropdown-title">
-        <option value="Java" title="Select-java-title">Java</option>
-        <option value="TypeScript" title="Select-TypeScript-title">TypeScript</option>
-        <option value="Others" title="Select-Other-title">Others</option>
-      </select>
-
-      <h2 id="checkbox-Slot-header" title="Choose">Slot-Checkboxes</h2>
-      <slot name="checkboxes"> 
-        <label title="Dev-checkbox-title">
-          <input type="checkbox" id="Dev-id-sdom" title="Dev-title"> Dev
-        </label>
-        <label title="QA-checkbox-title">
-          <input type="checkbox" id="QA-id-sdom" title="QA-title"> QA
-        </label>
-        <label title="DevOps-checkbox-title">
-          <input type="checkbox" id="DevOps-id-sdom" title="DevOps-title"> DevOps
-        </label>
-      </slot>
-    `
-    document.body.append(customButton);
+          <h2 id="dropdown-header" title="Select dropdown option">Select an option:</h2>
+          <select id="Languages-sdom" title="Language-Dropdown-title">
+            <option value="Java" title="Select-java-title">Java</option>
+            <option value="TypeScript" title="Select-TypeScript-title">TypeScript</option>
+            <option value="Others" title="Select-Other-title">Others</option>
+          </select>
+        `;
+      }
+    }
+    customElements.define('custom-sdom', CustomSdom);
+    document.body.append(new CustomSdom());
   </script>
 </body>
 </html>
