--- a/index.html
+++ b/index.html
@@ -49,10 +49,11 @@
           <p id="shadow-text-id" title="shadow-text-title">This is some text inside the shadow DOM.</p>
           
           <style>
-            h1 { color: black; }
+            h1 { color: darkgrey; }
             button { color: darkgrey ; }
             a { color: blue; text-decoration: underline; }
             h2 { color: darkgrey; margin-top: 20px; }
+            label { display: block; }
           </style>
 
           <h2 id="checkbox-header" title="Choose your role">Choose your role:</h2>
