--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <h1 id="shadow-header-id" title="SDOM-header-title"> Below Elements inside ShadowDOM H1-Text
             <button id="SDOM-button-ID" title="SDOM-button-Title"> SDOMButtonText </button>
           </h1>
-          <a href="https://oracle.com" target="_blank" id="example-link" title="oracle-title">oracle</a>
+          <a href="https://oracle.com" target="_blank" id="example-link" title="oracle-title">Home</a>
           <p id="shadow-text-id" title="shadow-text-title">This is some text inside the shadow DOM.</p>
           
           <style>
@@ -58,21 +58,21 @@
 
           <h2 id="checkbox-header" title="Choose your role">Choose your role:</h2>
           <label title="Dev-checkbox-title">
-            <input type="checkbox" id="Dev-id-sdom" title="Dev-title"> Dev
+            <input type="checkbox" id="Dev-id-sdom" title="Dev-title"> Dev1
           </label>
           <label title="QA-checkbox-title">
-            <input type="checkbox" id="QA-id-sdom" title="QA-title"> QA
+            <input type="checkbox" id="QA-id-sdom" title="QA-title"> QA1
           </label>
           <label title="DevOps-checkbox-title">
-            <input type="checkbox" id="DevOps-id-sdom" title="DevOps-title"> DevOps
+            <input type="checkbox" id="DevOps-id-sdom" title="DevOps-title"> DevOps1
           </label>
 
           <h2 id="radio-header" title="Select Radio options">Select one option:</h2>
           <label title="Yes-radio-title">
-            <input type="radio" name="radioGroup-sdom" value="Yes-value" id="Yes-id-sdom" title="Yes-title"> Yes
+            <input type="radio" name="radioGroup-sdom" value="Yes-value" id="Yes-id-sdom" title="Yes-title"> Yes1
           </label>
           <label title="No-radio-title">
-            <input type="radio" name="radioGroup-sdom" value="No-value" id="No-id-sdom" title="No-title"> No
+            <input type="radio" name="radioGroup-sdom" value="No-value" id="No-id-sdom" title="No-title"> No1
           </label>
 
           <h2 id="dropdown-header" title="Select dropdown option">Select an option:</h2>
