--- a/index.html
+++ b/index.html
@@ -46,11 +46,7 @@
           <button id="button-ID" title="button-Title"> SDOMButtonText </button>
           </h1>
           <a href="https://oracle.com" target="_blank" id="S-link-id" title="S-oracle-title"> Home </a>
-          <p>This is some text inside SDOM.</p>
-
-          <style>
-            label { display: block; }
-          </style>
+          <p id="SDOM-text-id" title="SDOM-Text-title">This is some text inside SDOM.</p>
           
           <h2>Choose your role:</h2>
           <label title="Dev-checkbox-title">
