--- a/index.html
+++ b/index.html
@@ -47,8 +47,12 @@
           </h1>
           <a href="https://oracle.com" target="_blank" id="S-link-id" title="S-oracle-title"> Home </a>
           <p id="SDOM-text-id" title="SDOM-Text-title">This is some text inside SDOM.</p>
+
+          <style>
+            label { display: block; }
+          </style>
           
-          <h2>Choose your role:</h2>
+          <h2 id="idrole" title="titlerole >Choose your role:</h2>
           <label title="Dev-checkbox-title">
             <input type="checkbox" id="Dev-id-sdom" title="Dev-title"> Dev1
           </label>
@@ -59,7 +63,7 @@
             <input type="checkbox" id="DevOps-id-sdom" title="DevOps-title"> DevOps1
           </label>
 
-          <h2>Select one option:</h2>
+          <h2 id="idradio" title="titleradio>Select one option:</h2>
           <label title="Yes-radio-title">
             <input type="radio" name="radioGroup-sdom" value="Yes-value" id="Yes-id-sdom" title="Yes-title"> Yes1
           </label>
@@ -67,7 +71,7 @@
             <input type="radio" name="radioGroup-sdom" value="No-value" id="No-id-sdom" title="No-title"> No1
           </label>
 
-          <h2>Select an option:</h2>
+          <h2 id="iddropdown" title="titledropdown>Select an option:</h2>
           <select id="Languages-sdom" title="Language-Dropdown-title">
             <option value="Java" title="Select-java-title">Java</option>
             <option value="TypeScript" title="Select-TypeScript-title">TypeScript</option>
