--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <h2 id="idbox" title="titlebox" >Checkboxes</h2>
   <label title="Dev-checkbox-title">
-    <input type="checkbox" id="Dev-id" title="Dev-title"> Dev
+    <input type="checkbox" id="Dev-id" title="Dev-title" checked> Dev
   </label>
   <label title="QA-checkbox-title">
     <input type="checkbox" id="QA-id" title="QA-title"> QA
@@ -23,7 +23,7 @@
 
   <h2 id="idrole" title="titlerole">Radio Buttons</h2>
   <label title="Yes-radio-title">
-    <input type="radio" name="radioGroup" value="Yes-value" id="Yes-id" title="Yes-title"> Yes
+    <input type="radio" name="radioGroup" value="Yes-value" id="Yes-id" title="Yes-title" checked> Yes
   </label>
   <label title="No-radio-title">
     <input type="radio" name="radioGroup" value="No-value" id="No-id" title="No-title"> No
@@ -47,6 +47,7 @@
           </h1>
           <h1 id="idh2" title="titlh2" > H1 with any child</h1>
           <p id="SDOM-text-id" title="SDOM-Text-title">This is some text inside SDOM.</p>
+          <a href="https://oracle1.com" target="_blank" id="link-id" title="oracle-title">oracle</a>
 
           <style>
             label { display: block; }
@@ -54,7 +55,7 @@
           
           <h2 id="idrole" title="titlerole">Choose your role:</h2>
           <label title="Dev-checkbox-title">
-            <input type="checkbox" id="Dev-id-sdom" title="Dev-title"> Dev1
+            <input type="checkbox" id="Dev-id-sdom" title="Dev-title" checked> Dev1
           </label>
           <label title="QA-checkbox-title">
             <input type="checkbox" id="QA-id-sdom" title="QA-title"> QA1
@@ -65,7 +66,7 @@
 
           <h2 id="idradio" title="titleradio">Select one option:</h2>
           <label title="Yes-radio-title">
-            <input type="radio" name="radioGroup-sdom" value="Yes-value" id="Yes-id-sdom" title="Yes-title"> Yes1
+            <input type="radio" name="radioGroup-sdom" value="Yes-value" id="Yes-id-sdom" title="Yes-title" checked> Yes1
           </label>
           <label title="No-radio-title">
             <input type="radio" name="radioGroup-sdom" value="No-value" id="No-id-sdom" title="No-title"> No1
