--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <li>Coffee</li> <li>Tea</li>
   </ul>
 
-  <h2 id="idbox" title="titlebox" >Checkboxes</h2>
+  <h2 id="idbox" title="titlebox">Checkboxes</h2>
   <label title="Dev-checkbox-title">
     <input type="checkbox" id="Dev-id" title="Dev-title" checked> Dev
   </label>
@@ -32,17 +32,8 @@
     <input type="radio" name="radioGroup" value="Yes-value" id="Yes-id" title="Yes-title"> Yes
   </label>
   <label title="No-radio-title">
-    <input type="radio" name="radioGroup" value="No-value" id="No-id" title="No-title"checked> No
+    <input type="radio" name="radioGroup" value="No-value" id="No-id" title="No-title" checked> No
   </label>
-
-  <h2 id="idrole" title="titlerole">Radio Buttons</h2>
-  <label title="Yes-radio-title">
-    <input type="radio" name="radioGroup" value="Yes-value" id="Yes-id" title="Yes-title"> Yes
-  </label>
-  <label title="No-radio-title">
-    <input type="radio" name="radioGroup" value="No-value" id="No-id" title="No-title"> No
-  </label>
-
 
   <h2 id="iddrop" title="titledropdown">Dropdown</h2>
   <select id="Languages" title="Language-Dropdown-title">
@@ -50,24 +41,38 @@
     <option value="TypeScript" title="Select-TypeScript-title">TypeScript</option>
     <option value="Others" title="Select-Other-title">Others</option>
   </select>
-  
 
   <script>
+    class CustomSdom1 extends HTMLElement {
+      constructor() {
+        super();
+        const shadowRoot = this.attachShadow({ mode: "open" });
+        shadowRoot.innerHTML = `
+          <h2 id="h2newroot" title="newroottitle">Nested shadowRoot</h2>
+          <a href="https://oracle.com" target="_blank" id="link-id" title="oracle-title">oracle</a>
+          <style>
+            h2 { color: lightblue; }
+          </style>
+        `
+      }
+    }
+
     class CustomSdom extends HTMLElement {
       constructor() {
         super();
         const shadowRoot = this.attachShadow({ mode: "open" });
         shadowRoot.innerHTML = `
-          <h1 id="idh1" title="titlh1" > SDOM Header (SDOM elements)
+          <h1 id="idh1" title="titlh1"> SDOM Header (SDOM elements)
           <button id="button-ID" title="button-Title"> SDOMButtonText </button>
           </h1>
           <p id="SDOM-text-id" title="SDOM-Text-title">This is some text inside SDOM.
           <div id="DivDOM-text-id" title="DivDOM-Text-title">DOM div</div>
           </p>
 
-           <ul>
-           <li>Coffee</li> <li>Tea</li>
-           </ul>
+          <ul>
+            <li>Coffee</li>
+            <li>Tea</li>
+          </ul>
           
           <h2 id="idrole" title="titlerole">Choose your role:</h2>
           <label title="Dev-checkbox-title">
@@ -88,24 +93,26 @@
             <input type="radio" name="radioGroup-sdom" value="No-value" id="No-id-sdom" title="No-title"> No1
           </label>
 
-          <h2 id="idradio" title="titleradio">Select one option:</h2>
-          <label title="Yes-radio-title">
-            <input type="radio" name="radioGroup-sdom" value="Yes-value" id="Yes-id-sdom" title="Yes-title" checked> Yes1
-          </label>
-          <label title="No-radio-title">
-            <input type="radio" name="radioGroup-sdom" value="No-value" id="No-id-sdom" title="No-title"> No1
-          </label>
-
-          <h2 id="iddropdown" title="titledropdown" >Select an option:</h2>
+          <h2 id="iddropdown" title="titledropdown">Select an option:</h2>
           <select id="Languages-sdom" title="Language-Dropdown-title">
             <option value="Java" title="Select-java-title">Java</option>
             <option value="TypeScript" title="Select-TypeScript-title">TypeScript</option>
             <option value="Others" title="Select-Other-title">Others</option>
           </select>
-        `
+
+          <style>
+            label { display: block; }
+          </style>
+        `;
+        
+        // Append nested custom element with its own shadow root
+        const nestedElement = new CustomSdom1();
+        shadowRoot.append(nestedElement);
       }
     }
+
     customElements.define('custom-sdom', CustomSdom);
+    customElements.define('custom-sdom1', CustomSdom1);
     document.body.append(new CustomSdom());
   </script>
 </body>
