--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
         shadowRoot.innerHTML = `
           <h2 id="h2newroot" title="newroottitle">Nested shadowRoot</h2>
           <a href="https://oracle.com" target="_blank" id="link-id" title="oracle-title">oracle</a>
+          <a href="/now/nav/ui/classic/params/target/%24pa_dashboards_overview.do" class="now-text-link -primary show-underline" aria-label="Visualize it on Dashboards" data-iridize-nofb="" iridize-shadow-dom-element="" style="border: 0px none rgb(41, 61, 158); border-radius: 0px;">Visualize it</a>
+          
           <style>
             h2 { color: lightblue; }
           </style>
