--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         const shadowRoot = this.attachShadow({ mode: "open" });
         shadowRoot.innerHTML = `
           <a href="/now/nav/ui/classic/params/target/%24pa_dashboards_overview.do" class="now-text-link -primary show-underline" aria-label="Visualize it on Dashboards" data-iridize-nofb="" iridize-shadow-dom-element="" style="border: 0px none rgb(41, 61, 158); border-radius: 0px;">Visualize it</a>
-        `
+        `;
       }
     }
 
@@ -61,6 +61,7 @@
           <h1 id="idh1" title="titlh1"> SDOM Header (SDOM elements)
           <button id="button-ID" title="button-Title"> SDOMButtonText </button>
           </h1>
+          <div id="custom-sdom1-container"></div>
           <p id="SDOM-text-id" title="SDOM-Text-title">This is some text inside SDOM.
           <div id="DivDOM-text-id" title="DivDOM-Text-title">DOM div</div>
           </p>
@@ -103,7 +104,7 @@
         
         // Append nested custom element with its own shadow root
         const nestedElement = new CustomSdom1();
-        shadowRoot.append(nestedElement);
+        shadowRoot.getElementById('custom-sdom1-container').append(nestedElement);
       }
     }
 
