--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
       </form>
       <br>
     
-      <form id="iddropdown" title="titledropdown">
-      <select id="Languages-sdom" title="Language-Dropdown-title"> Select an option:
+      <form id="iddropdown" title="titledropdown"> Select an option:
+      <select id="Languages-sdom" title="Language-Dropdown-title"> Options-text:
         <option value="Java" title="Select-java-title">Java</option>
         <option value="TypeScript" title="Select-TypeScript-title">TypeScript</option>
         <option value="Others" title="Select-Other-title">Others</option>
