--- a/index.html
+++ b/index.html
@@ -75,15 +75,15 @@
               <h1 id="idh1" title="titlh1"> SDOM Header (SDOM elements)
               <button id="button-ID" title="button-Title"> SDOMButtonText </button>
               </h1>
-              <div id="custom-sdom1-container"></div>
-              <p id="SDOM-text-id" title="SDOM-Text-title">This is some text inside SDOM.
-              <div id="DivDOM-text-id" title="DivDOM-Text-title">DOM div</div>
-              </p>
-    
+               
               <ul>
                 <li>Coffee</li>
                 <li>Tea</li>
-              </ul>        
+              </ul>  
+
+              <p id="SDOM-text-id" title="SDOM-Text-title">This is some text inside SDOM.
+                 <div id="DivDOM-text-id" title="DivDOM-Text-title"> SDOM div </div>
+              </p>      
 
       <form id="idrole" title="titlerole">Choose your role:
       <label title="Dev-checkbox-title">
