--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
        <circle cx="20" cy="20" r="20" stroke="green" stroke-width="2" fill="black" />
     </svg>
 
+    <img src="https://www.w3schools.com/images/lamp.jpg" alt="Lamp" width="32" height="32">
+
     <hr>
 
     <script>
@@ -132,6 +134,8 @@
       <svg width="50" height="50">
        <circle cx="20" cy="20" r="20" stroke="green" stroke-width="2" fill="black" />
       </svg>
+
+      <img src="https://www.w3schools.com/images/lamp.jpg" alt="Lamp" width="32" height="32">
     
     
       <h3 id="idh3" title="titlh3"> h3-Nesting-Element
