--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@
       <svg width="50" height="50">
        <circle cx="20" cy="20" r="20" stroke="green" stroke-width="2" fill="black" />
       </svg>
-
-      <img src="https://www.w3schools.com/images/lamp.jpg" alt="Lamp" width="32" height="32">
-    
+      <br></br>
+      
+      <h4> Duplicate locators </h4>
       <h4> Duplicate locators </h4>
       <h4> Duplicate locators </h4>
       <br></br>
