--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
           </form>
 
           <form>
-            <label for="Languages-sdom" title="Language-Dropdown-title">Options-text:</label>
+            <label for="Languages-sdom" title="Language-Dropdown-title">Language-text:</label>
             <select id="Languages-sdom">
               <option value="Java" title="Select-java-title">Java</option>
               <option value="TypeScript" title="Select-TypeScript-title">TypeScript</option>
