--- a/index.html
+++ b/index.html
@@ -151,8 +151,10 @@
             </label>
           </form>
 
+          <p></p>
+
           <form>
-            <label for="Languages-sdom" title="Language-Dropdown-title">Language-text:</label>
+            <label for="Languages-sdom" title="Language-Dropdown-title">TXT_Language</label>
             <select id="Languages-sdom">
               <option value="Java" title="Select-java-title">Java</option>
               <option value="TypeScript" title="Select-TypeScript-title">TypeScript</option>
@@ -160,17 +162,23 @@
             </select>
           </form>
 
+          <p></p>
+
           <form>
-            <label for="fname" id="idlabel" title="titlelabel">Enter your First name:</label>
+            <label for="fname" id="idlabel" title="titlelabel">TXT_Name</label>
             <input type="text" id="fname-sdom" name="fname" value="Subbu" title="name-title"> 
             <input type="reset" value="Reset" id="idreset" name="resetname" title="reset-title">
           </form>
+
+          <p></p>
 
           <div class="svg-container">
             <svg width="50" height="50">
               <circle cx="20" cy="20" r="20" stroke="green" stroke-width="2" fill="black" />
             </svg>
           </div>
+
+          <p></p>
 
           <img src="https://www.w3schools.com/images/lamp.jpg" alt="Lamp" width="32" height="32">
 
